--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "5432:5432"
     networks:
       - app-tier
+    volumes:
+      - "./data:/var/lib/postgresql/data"
   pgadmin:
     image: dpage/pgadmin4
     restart: always
@@ -30,6 +32,8 @@ services:
       - db
     links:
       - db:db 
+    volumes:
+      - "./model:/model"
 networks:
     app-tier:
           driver: bridge
